--- a/GA4/V1.0/example.html
+++ b/GA4/V1.0/example.html
@@ -1,5 +1,13 @@
 <html>
     <head>
-        
+        <script src="https://lib.digitalmomentum.com.au/GA4/V1.0/GA4.min.js"></script>
+        <script>
+            //Init the library with GA and AW. 
+            GA4Helper.init('G-SXVZJH8F4S', 'AW-S79314105');
+        </script>
     </head>
+    <body>
+        <p>the below button will trigger an event of type "" and pass parameters content_type="product" and content_id="Yum Food"</p>
+        <button id="Shop_Now" data-ga-click="select_content" data-ga-param-content_type="product" data-ga-param-content_id="Yum Food">Shop Now</button>
+    </body>
 </html>
